tests/NormalTests/paczka1/fuzzy1/61414602.err
Error in line 4: kgG A696 79,4
Error in line 7: nWs2rGX4D A687 43,H
Error in line 6: kgG A687 9,3
Error in line 11: nWs2rGX4D A687 S,S
Error in line 16: nWs2rGX4D S231 39,1
Error in line 31: oHp S231 54,3
Error in line 35: FHI2xj934xy A696 22,9
